--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <body>
 
 <header>
-    <h1>Kevin Alex Sam — Business Analytics Portfolio</h1>
+    <h1>Kevin Alex Sam - Business Analytics Portfolio</h1>
     <p>Power BI • Business Intelligence • Data Visualization • Data Analysis</p>
     <a class="cta-btn" href="https://github.com/kevinalexsam" target="_blank">View GitHub Profile</a>
 </header>
